--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,7 +22,7 @@
                 <button type="button" rel="tooltip" class="btn btn-danger btn-sm btn-icon" (click)="borrarProducto(pro._id)">
                     <i class="tim-icons icon-single-02">Borrar</i>
                 </button>
-                <button type="button" rel="tooltip" class="btn btn-success btn-sm btn-icon">
+                <button type="button" rel="tooltip" class="btn btn-success btn-sm btn-icon" (click)="vistaEditar(pro._id)">
                     <i class="tim-icons icon-settings-gear-63">Editar</i>
                 </button>
             </td>
@@ -48,5 +48,24 @@
     </div>
   </div>
   
+</form>
+<br>
+<br>
+<form class="form-dark" [formGroup]="producto" (ngSubmit)="editarProducto()" *ngIf="editar" >
+  <h4>Editar</h4>
+  <div class="form-row">
+    <div class="col">
+      <input id="nombre" type="text" class="form-control bg-dark" placeholder="Nombre del producto" formControlName="nombre">
+    </div>
+    <div class="col">
+      <input id="descripcion" type="text" class="form-control bg-dark" placeholder="Descripcion de producto" formControlName="descripcion">
+    </div>
+    <div class="col">
+      <input id="precio" type="text" class="form-control bg-dark" placeholder="Precio del producto" formControlName="precio">
+    </div>
+    <div>
+      <button class="btn btn-info btn-icon" type="submit">Editar</button>
+    </div>
+  </div>
 </form>
 
